Adicionando projeto exemplo-socket-cliente

--- a/exemplo-socket-cliente/index.html
+++ b/exemplo-socket-cliente/index.html
@@ -16,9 +16,9 @@
     <div id="conteiner">
         <div id="chat">
             <form>
-                <input type="text" name="usuario" placeholder="Digite o nome do usuário">
+                <input type="text" id="usuario" name="usuario" placeholder="Digite o nome do usuário" required>
                 <textarea name="chat" rows="20" readonly></textarea>
-                <input type="text" name="mensagem" placeholder="Digite sua mensagem" required>
+                <input type="text" id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required>
                 <input type="submit" value="Enviar">
             </form>
         </div>
