Adicionando projeto exemplo-socket-cliente

--- a/exemplo-socket-cliente/index.html
+++ b/exemplo-socket-cliente/index.html
@@ -17,7 +17,7 @@
         <div id="chat">
             <form>
                 <input type="text" id="usuario" name="usuario" placeholder="Digite o nome do usuário" required>
-                <textarea id="chat" name="chat" rows="20" readonly></textarea>
+                <div id="mensagensChat"></div>
                 <input type="text" id="mensagem" name="mensagem" placeholder="Digite sua mensagem" required>
                 <input type="submit" value="Enviar">
             </form>
