Adicionando projeto exemplo-socket-cliente

--- a/exemplo-socket-cliente/index.html
+++ b/exemplo-socket-cliente/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="usuarios">
-            <h2>Usuários online</h2>
+            <h2>Usuários ativos</h2>
             <div id="listaUsuarios"></div>
         </div>
 
